--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     <properties>
         <java.version>17</java.version>
         <vaadin.version>24.1.9</vaadin.version>
+        <junit.jupiter.version>5.9.1</junit.jupiter.version>
     </properties>
 
     <parent>
@@ -80,7 +81,7 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
-            <version>RELEASE</version>
+            <version>${junit-jupiter.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
