Fix bug heap out of memory

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+logging.level.com.example.aismarinetracker=warn
 server.port=${PORT:8080}
 server.address=localhost
 logging.level.org.atmosphere = warn
