Add properties for changing port and address

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-logging.level.com.example.aismarinetracker=warn
+logging.level.com.example.aismarinetracker=info
 server.port=${PORT:8080}
 server.address=localhost
 logging.level.org.atmosphere = warn
@@ -8,3 +8,6 @@ spring.mustache.check-template-location = false
 vaadin.launch-browser=false
 # white list
 vaadin.whitelisted-packages=software.xdev.vaadin
+
+address=127.0.0.1
+port=12346
